core/pbrtparse.output
Terminaux qui ne sont utilisés

   ID


Grammaire

    0 $accept: start $end

    1 start: ri_stmt_list

    2 array_init: /* vide */

    3 string_array_init: /* vide */

    4 num_array_init: /* vide */

    5 array: string_array
    6      | num_array

    7 string_array: real_string_array
    8             | single_element_string_array

    9 real_string_array: array_init LBRACK string_list RBRACK

   10 single_element_string_array: array_init string_list_entry

   11 string_list: string_list string_list_entry
   12            | string_list_entry

   13 string_list_entry: string_array_init STRING

   14 num_array: real_num_array
   15          | single_element_num_array

   16 real_num_array: array_init LBRACK num_list RBRACK

   17 single_element_num_array: array_init num_list_entry

   18 num_list: num_list num_list_entry
   19         | num_list_entry

   20 num_list_entry: num_array_init NUM

   21 paramlist: paramlist_init paramlist_contents

   22 paramlist_init: /* vide */

   23 paramlist_contents: paramlist_entry paramlist_contents
   24                   | /* vide */

   25 paramlist_entry: STRING array

   26 ri_stmt_list: ri_stmt_list ri_stmt
   27             | ri_stmt

   28 ri_stmt: ACCELERATOR STRING paramlist
   29        | AREALIGHTSOURCE STRING paramlist
   30        | ATTRIBUTEBEGIN
   31        | ATTRIBUTEEND
   32        | CAMERA STRING paramlist
   33        | CONCATTRANSFORM num_array
   34        | COORDINATESYSTEM STRING
   35        | COORDSYSTRANSFORM STRING
   36        | FILM STRING paramlist
   37        | IDENTITY
   38        | LIGHTSOURCE STRING paramlist
   39        | LOOKAT NUM NUM NUM NUM NUM NUM NUM NUM NUM
   40        | MATERIAL STRING paramlist
   41        | OBJECTBEGIN STRING
   42        | OBJECTEND
   43        | OBJECTINSTANCE STRING
   44        | PIXELFILTER STRING paramlist
   45        | REVERSEORIENTATION
   46        | ROTATE NUM NUM NUM NUM
   47        | SAMPLER STRING paramlist
   48        | SCALE NUM NUM NUM
   49        | SEARCHPATH STRING
   50        | SHAPE STRING paramlist
   51        | SURFACEINTEGRATOR STRING paramlist
   52        | TEXTURE STRING STRING STRING paramlist
   53        | TRANSFORMBEGIN
   54        | TRANSFORMEND
   55        | TRANSFORM real_num_array
   56        | TRANSLATE NUM NUM NUM
   57        | VOLUMEINTEGRATOR STRING paramlist
   58        | VOLUME STRING paramlist
   59        | WORLDBEGIN
   60        | WORLDEND


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
STRING (258) 13 25 28 29 32 34 35 36 38 40 41 43 44 47 49 50 51 52
    57 58
ID (259)
NUM (260) 20 39 46 48 56
LBRACK (261) 9 16
RBRACK (262) 9 16
ACCELERATOR (263) 28
AREALIGHTSOURCE (264) 29
ATTRIBUTEBEGIN (265) 30
ATTRIBUTEEND (266) 31
CAMERA (267) 32
CONCATTRANSFORM (268) 33
COORDINATESYSTEM (269) 34
COORDSYSTRANSFORM (270) 35
FILM (271) 36
IDENTITY (272) 37
LIGHTSOURCE (273) 38
LOOKAT (274) 39
MATERIAL (275) 40
OBJECTBEGIN (276) 41
OBJECTEND (277) 42
OBJECTINSTANCE (278) 43
PIXELFILTER (279) 44
REVERSEORIENTATION (280) 45
ROTATE (281) 46
SAMPLER (282) 47
SCALE (283) 48
SEARCHPATH (284) 49
SHAPE (285) 50
SURFACEINTEGRATOR (286) 51
TEXTURE (287) 52
TRANSFORMBEGIN (288) 53
TRANSFORMEND (289) 54
TRANSFORM (290) 55
TRANSLATE (291) 56
VOLUME (292) 58
VOLUMEINTEGRATOR (293) 57
WORLDBEGIN (294) 59
WORLDEND (295) 60
HIGH_PRECEDENCE (296)


Non-terminaux, suivis des règles où ils apparaissent

$accept (42)
    à gauche: 0
start (43)
    à gauche: 1, à droite: 0
array_init (44)
    à gauche: 2, à droite: 9 10 16 17
string_array_init (45)
    à gauche: 3, à droite: 13
num_array_init (46)
    à gauche: 4, à droite: 20
array (47)
    à gauche: 5 6, à droite: 25
string_array (48)
    à gauche: 7 8, à droite: 5
real_string_array (49)
    à gauche: 9, à droite: 7
single_element_string_array (50)
    à gauche: 10, à droite: 8
string_list (51)
    à gauche: 11 12, à droite: 9 11
string_list_entry (52)
    à gauche: 13, à droite: 10 11 12
num_array (53)
    à gauche: 14 15, à droite: 6 33
real_num_array (54)
    à gauche: 16, à droite: 14 55
single_element_num_array (55)
    à gauche: 17, à droite: 15
num_list (56)
    à gauche: 18 19, à droite: 16 18
num_list_entry (57)
    à gauche: 20, à droite: 17 18 19
paramlist (58)
    à gauche: 21, à droite: 28 29 32 36 38 40 44 47 50 51 52 57 58
paramlist_init (59)
    à gauche: 22, à droite: 21
paramlist_contents (60)
    à gauche: 23 24, à droite: 21 23
paramlist_entry (61)
    à gauche: 25, à droite: 23
ri_stmt_list (62)
    à gauche: 26 27, à droite: 1 26
ri_stmt (63)
    à gauche: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
    46 47 48 49 50 51 52 53 54 55 56 57 58 59 60, à droite: 26 27


état 0

    0 $accept: . start $end

    ACCELERATOR         décalage et aller à l'état 1
    AREALIGHTSOURCE     décalage et aller à l'état 2
    ATTRIBUTEBEGIN      décalage et aller à l'état 3
    ATTRIBUTEEND        décalage et aller à l'état 4
    CAMERA              décalage et aller à l'état 5
    CONCATTRANSFORM     décalage et aller à l'état 6
    COORDINATESYSTEM    décalage et aller à l'état 7
    COORDSYSTRANSFORM   décalage et aller à l'état 8
    FILM                décalage et aller à l'état 9
    IDENTITY            décalage et aller à l'état 10
    LIGHTSOURCE         décalage et aller à l'état 11
    LOOKAT              décalage et aller à l'état 12
    MATERIAL            décalage et aller à l'état 13
    OBJECTBEGIN         décalage et aller à l'état 14
    OBJECTEND           décalage et aller à l'état 15
    OBJECTINSTANCE      décalage et aller à l'état 16
    PIXELFILTER         décalage et aller à l'état 17
    REVERSEORIENTATION  décalage et aller à l'état 18
    ROTATE              décalage et aller à l'état 19
    SAMPLER             décalage et aller à l'état 20
    SCALE               décalage et aller à l'état 21
    SEARCHPATH          décalage et aller à l'état 22
    SHAPE               décalage et aller à l'état 23
    SURFACEINTEGRATOR   décalage et aller à l'état 24
    TEXTURE             décalage et aller à l'état 25
    TRANSFORMBEGIN      décalage et aller à l'état 26
    TRANSFORMEND        décalage et aller à l'état 27
    TRANSFORM           décalage et aller à l'état 28
    TRANSLATE           décalage et aller à l'état 29
    VOLUME              décalage et aller à l'état 30
    VOLUMEINTEGRATOR    décalage et aller à l'état 31
    WORLDBEGIN          décalage et aller à l'état 32
    WORLDEND            décalage et aller à l'état 33

    start         aller à l'état 34
    ri_stmt_list  aller à l'état 35
    ri_stmt       aller à l'état 36


état 1

   28 ri_stmt: ACCELERATOR . STRING paramlist

    STRING  décalage et aller à l'état 37


état 2

   29 ri_stmt: AREALIGHTSOURCE . STRING paramlist

    STRING  décalage et aller à l'état 38


état 3

   30 ri_stmt: ATTRIBUTEBEGIN .

    $défaut  réduction par utilisation de la règle 30 (ri_stmt)


état 4

   31 ri_stmt: ATTRIBUTEEND .

    $défaut  réduction par utilisation de la règle 31 (ri_stmt)


état 5

   32 ri_stmt: CAMERA . STRING paramlist

    STRING  décalage et aller à l'état 39


état 6

   33 ri_stmt: CONCATTRANSFORM . num_array

    $défaut  réduction par utilisation de la règle 2 (array_init)

    array_init                aller à l'état 40
    num_array                 aller à l'état 41
    real_num_array            aller à l'état 42
    single_element_num_array  aller à l'état 43


état 7

   34 ri_stmt: COORDINATESYSTEM . STRING

    STRING  décalage et aller à l'état 44


état 8

   35 ri_stmt: COORDSYSTRANSFORM . STRING

    STRING  décalage et aller à l'état 45


état 9

   36 ri_stmt: FILM . STRING paramlist

    STRING  décalage et aller à l'état 46


état 10

   37 ri_stmt: IDENTITY .

    $défaut  réduction par utilisation de la règle 37 (ri_stmt)


état 11

   38 ri_stmt: LIGHTSOURCE . STRING paramlist

    STRING  décalage et aller à l'état 47


état 12

   39 ri_stmt: LOOKAT . NUM NUM NUM NUM NUM NUM NUM NUM NUM

    NUM  décalage et aller à l'état 48


état 13

   40 ri_stmt: MATERIAL . STRING paramlist

    STRING  décalage et aller à l'état 49


état 14

   41 ri_stmt: OBJECTBEGIN . STRING

    STRING  décalage et aller à l'état 50


état 15

   42 ri_stmt: OBJECTEND .

    $défaut  réduction par utilisation de la règle 42 (ri_stmt)


état 16

   43 ri_stmt: OBJECTINSTANCE . STRING

    STRING  décalage et aller à l'état 51


état 17

   44 ri_stmt: PIXELFILTER . STRING paramlist

    STRING  décalage et aller à l'état 52


état 18

   45 ri_stmt: REVERSEORIENTATION .

    $défaut  réduction par utilisation de la règle 45 (ri_stmt)


état 19

   46 ri_stmt: ROTATE . NUM NUM NUM NUM

    NUM  décalage et aller à l'état 53


état 20

   47 ri_stmt: SAMPLER . STRING paramlist

    STRING  décalage et aller à l'état 54


état 21

   48 ri_stmt: SCALE . NUM NUM NUM

    NUM  décalage et aller à l'état 55


état 22

   49 ri_stmt: SEARCHPATH . STRING

    STRING  décalage et aller à l'état 56


état 23

   50 ri_stmt: SHAPE . STRING paramlist

    STRING  décalage et aller à l'état 57


état 24

   51 ri_stmt: SURFACEINTEGRATOR . STRING paramlist

    STRING  décalage et aller à l'état 58


état 25

   52 ri_stmt: TEXTURE . STRING STRING STRING paramlist

    STRING  décalage et aller à l'état 59


état 26

   53 ri_stmt: TRANSFORMBEGIN .

    $défaut  réduction par utilisation de la règle 53 (ri_stmt)


état 27

   54 ri_stmt: TRANSFORMEND .

    $défaut  réduction par utilisation de la règle 54 (ri_stmt)


état 28

   55 ri_stmt: TRANSFORM . real_num_array

    $défaut  réduction par utilisation de la règle 2 (array_init)

    array_init      aller à l'état 60
    real_num_array  aller à l'état 61


état 29

   56 ri_stmt: TRANSLATE . NUM NUM NUM

    NUM  décalage et aller à l'état 62


état 30

   58 ri_stmt: VOLUME . STRING paramlist

    STRING  décalage et aller à l'état 63


état 31

   57 ri_stmt: VOLUMEINTEGRATOR . STRING paramlist

    STRING  décalage et aller à l'état 64


état 32

   59 ri_stmt: WORLDBEGIN .

    $défaut  réduction par utilisation de la règle 59 (ri_stmt)


état 33

   60 ri_stmt: WORLDEND .

    $défaut  réduction par utilisation de la règle 60 (ri_stmt)


état 34

    0 $accept: start . $end

    $end  décalage et aller à l'état 65


état 35

    1 start: ri_stmt_list .
   26 ri_stmt_list: ri_stmt_list . ri_stmt

    ACCELERATOR         décalage et aller à l'état 1
    AREALIGHTSOURCE     décalage et aller à l'état 2
    ATTRIBUTEBEGIN      décalage et aller à l'état 3
    ATTRIBUTEEND        décalage et aller à l'état 4
    CAMERA              décalage et aller à l'état 5
    CONCATTRANSFORM     décalage et aller à l'état 6
    COORDINATESYSTEM    décalage et aller à l'état 7
    COORDSYSTRANSFORM   décalage et aller à l'état 8
    FILM                décalage et aller à l'état 9
    IDENTITY            décalage et aller à l'état 10
    LIGHTSOURCE         décalage et aller à l'état 11
    LOOKAT              décalage et aller à l'état 12
    MATERIAL            décalage et aller à l'état 13
    OBJECTBEGIN         décalage et aller à l'état 14
    OBJECTEND           décalage et aller à l'état 15
    OBJECTINSTANCE      décalage et aller à l'état 16
    PIXELFILTER         décalage et aller à l'état 17
    REVERSEORIENTATION  décalage et aller à l'état 18
    ROTATE              décalage et aller à l'état 19
    SAMPLER             décalage et aller à l'état 20
    SCALE               décalage et aller à l'état 21
    SEARCHPATH          décalage et aller à l'état 22
    SHAPE               décalage et aller à l'état 23
    SURFACEINTEGRATOR   décalage et aller à l'état 24
    TEXTURE             décalage et aller à l'état 25
    TRANSFORMBEGIN      décalage et aller à l'état 26
    TRANSFORMEND        décalage et aller à l'état 27
    TRANSFORM           décalage et aller à l'état 28
    TRANSLATE           décalage et aller à l'état 29
    VOLUME              décalage et aller à l'état 30
    VOLUMEINTEGRATOR    décalage et aller à l'état 31
    WORLDBEGIN          décalage et aller à l'état 32
    WORLDEND            décalage et aller à l'état 33

    $défaut  réduction par utilisation de la règle 1 (start)

    ri_stmt  aller à l'état 66


état 36

   27 ri_stmt_list: ri_stmt .

    $défaut  réduction par utilisation de la règle 27 (ri_stmt_list)


état 37

   28 ri_stmt: ACCELERATOR STRING . paramlist

    $défaut  réduction par utilisation de la règle 22 (paramlist_init)

    paramlist       aller à l'état 67
    paramlist_init  aller à l'état 68


état 38

   29 ri_stmt: AREALIGHTSOURCE STRING . paramlist

    $défaut  réduction par utilisation de la règle 22 (paramlist_init)

    paramlist       aller à l'état 69
    paramlist_init  aller à l'état 68


état 39

   32 ri_stmt: CAMERA STRING . paramlist

    $défaut  réduction par utilisation de la règle 22 (paramlist_init)

    paramlist       aller à l'état 70
    paramlist_init  aller à l'état 68


état 40

   16 real_num_array: array_init . LBRACK num_list RBRACK
   17 single_element_num_array: array_init . num_list_entry

    LBRACK  décalage et aller à l'état 71

    $défaut  réduction par utilisation de la règle 4 (num_array_init)

    num_array_init  aller à l'état 72
    num_list_entry  aller à l'état 73


état 41

   33 ri_stmt: CONCATTRANSFORM num_array .

    $défaut  réduction par utilisation de la règle 33 (ri_stmt)


état 42

   14 num_array: real_num_array .

    $défaut  réduction par utilisation de la règle 14 (num_array)


état 43

   15 num_array: single_element_num_array .

    $défaut  réduction par utilisation de la règle 15 (num_array)


état 44

   34 ri_stmt: COORDINATESYSTEM STRING .

    $défaut  réduction par utilisation de la règle 34 (ri_stmt)


état 45

   35 ri_stmt: COORDSYSTRANSFORM STRING .

    $défaut  réduction par utilisation de la règle 35 (ri_stmt)


état 46

   36 ri_stmt: FILM STRING . paramlist

    $défaut  réduction par utilisation de la règle 22 (paramlist_init)

    paramlist       aller à l'état 74
    paramlist_init  aller à l'état 68


état 47

   38 ri_stmt: LIGHTSOURCE STRING . paramlist

    $défaut  réduction par utilisation de la règle 22 (paramlist_init)

    paramlist       aller à l'état 75
    paramlist_init  aller à l'état 68


état 48

   39 ri_stmt: LOOKAT NUM . NUM NUM NUM NUM NUM NUM NUM NUM

    NUM  décalage et aller à l'état 76


état 49

   40 ri_stmt: MATERIAL STRING . paramlist

    $défaut  réduction par utilisation de la règle 22 (paramlist_init)

    paramlist       aller à l'état 77
    paramlist_init  aller à l'état 68


état 50

   41 ri_stmt: OBJECTBEGIN STRING .

    $défaut  réduction par utilisation de la règle 41 (ri_stmt)


état 51

   43 ri_stmt: OBJECTINSTANCE STRING .

    $défaut  réduction par utilisation de la règle 43 (ri_stmt)


état 52

   44 ri_stmt: PIXELFILTER STRING . paramlist

    $défaut  réduction par utilisation de la règle 22 (paramlist_init)

    paramlist       aller à l'état 78
    paramlist_init  aller à l'état 68


état 53

   46 ri_stmt: ROTATE NUM . NUM NUM NUM

    NUM  décalage et aller à l'état 79


état 54

   47 ri_stmt: SAMPLER STRING . paramlist

    $défaut  réduction par utilisation de la règle 22 (paramlist_init)

    paramlist       aller à l'état 80
    paramlist_init  aller à l'état 68


état 55

   48 ri_stmt: SCALE NUM . NUM NUM

    NUM  décalage et aller à l'état 81


état 56

   49 ri_stmt: SEARCHPATH STRING .

    $défaut  réduction par utilisation de la règle 49 (ri_stmt)


état 57

   50 ri_stmt: SHAPE STRING . paramlist

    $défaut  réduction par utilisation de la règle 22 (paramlist_init)

    paramlist       aller à l'état 82
    paramlist_init  aller à l'état 68


état 58

   51 ri_stmt: SURFACEINTEGRATOR STRING . paramlist
